[gd_scene load_steps=2 format=3 uid="uid://cbkfd0jsehayt"]

[ext_resource type="Script" path="res://Scenes/Menu.gd" id="1_x3oos"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_x3oos")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "START GAME"

[node name="Setting" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Setting" to="." method="_on_setting_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
